`Runtime.exec()` is deprecated. This change uses `ProcessBuilder` instead.
PiperOrigin-RevId: 302551852